--- a/Client.Web/Scripts/app/component/config/router/my-ads-page.html
+++ b/Client.Web/Scripts/app/component/config/router/my-ads-page.html
@@ -14,6 +14,6 @@
     </a>
 
     <div class="add_flat_ctrl" ui-sref="add-ads">
-        <div class="title">Добавить объектЪ</div>
+        <div class="title">Добавить объект</div>
     </div>
 </div>
