--- a/Client.Web/Scripts/app/theme/style/pages/my-add.scss
+++ b/Client.Web/Scripts/app/theme/style/pages/my-add.scss
@@ -22,7 +22,7 @@
     position: relative;
     float: left;
     margin-bottom: 27px;
-    background: url("../../../Content/images/plus-icon.svg") no-repeat 50% 40%;
+    background: url("../../../../Content/images/plus-icon.svg") no-repeat 50% 40%;
     text-align: center;
     cursor: pointer;
 
