--- a/Client.Web/Scripts/app/component/flat-filter/flat-filter.html
+++ b/Client.Web/Scripts/app/component/flat-filter/flat-filter.html
@@ -10,8 +10,8 @@
     <div class="input-container price">
         <h6 class="input-label">Стоимость, &#8381;</h6>
         <div class="double-input">
-            <input class="first" type="text" placeholder="От" ng-model="price.min">
-            <input class="second" type="text" placeholder="До" ng-model="price.max">
+            <input class="first" type="text" placeholder="От" ng-model="price.min" strict-price-input>
+            <input class="second" type="text" placeholder="До" ng-model="price.max" strict-price-input>
         </div>
     </div>
 
