#GIG-276 Создание объекта. После завершения создания объекта не отображается попап успешного добавления

--- a/Client.Web/Scripts/app/theme/style/pages/add.scss
+++ b/Client.Web/Scripts/app/theme/style/pages/add.scss
@@ -229,6 +229,7 @@ $tab-active-bg: #f8fafb;
     }
 
     .title {
+      padding-right: 24px;
       font-weight: 200;
       font-size: 34px;
       margin-bottom: 40px;
