--- a/Client.Web/Scripts/app/theme/style/components.scss
+++ b/Client.Web/Scripts/app/theme/style/components.scss
@@ -64,7 +64,8 @@ html,body {
   display: block;
   text-decoration: none;
   width: 323px;
-  height: 328px;
+  min-height: 328px;
+  padding-bottom: 40px;
   border-radius: 10px;
   background-color: #ffffff;
   position: relative;
