--- a/Client.Web/Scripts/app/component/gheader/gheader.scss
+++ b/Client.Web/Scripts/app/component/gheader/gheader.scss
@@ -3,6 +3,9 @@
   height: 80px;
   background-color: white;
   padding: 20px 30px;
+  position:fixed;
+  width:1440px;
+  z-index:100;
   .logo-green {
     height: 100%;
     margin-right: 20px;
