вертска - http://joxi.ru/LQ2KR1otRXEBmj

--- a/Client.Web/Scripts/app/component/tab-section/templates/swap.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/swap.html
@@ -45,7 +45,8 @@
     </label>
 
     <div class="form-label checkbox-container">
-        <input type="checkbox" class="checkbox" id="confirm"><label for="confirm">После публикации перейти к добавлению объекта</label>
+`        <input style="vertical-align: middle" type="checkbox" class="checkbox" id="confirm">
+        <label style="width: 85%" for="confirm">После публикации перейти к добавлению объекта</label>
     </div>
 
     <button class="button action action_next orange large finish" ng-disabled="!changeForm.$valid" ng-click="sendData(1)">Сохранить и опубликовать</button>
