--- a/Client.Web/Scripts/app/component/tab-section/templates/location.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/location.html
@@ -48,12 +48,13 @@
             </div>
         </div>
     </label>
-    <label class="form-label">
+    <!--TODO: изменить апи так, чтобы город знал есть ли в нем метро-->
+    <label class="form-label" ng-if="data.districts.length">
         <div class="label-title">Метро</div>
         <div class="label-item">
-            <multiselect-dropdown-g city-id="$parent.model.city.id"
+            <metro-station-multiselect city-id="$parent.model.city.id"
                                     selected-items="$parent.model.selectedStations"
-                                    class="add-station"></multiselect-dropdown-g>
+                                    class="add-station"></metro-station-multiselect>
         </div>
     </label>
     <button class="button action action_next green large next" ng-disabled="!locationForm.$valid"
