--- a/Client.Web/Scripts/app/component/tab-section/templates/location.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/location.html
@@ -33,7 +33,7 @@
         <label class="form-label">
             <div class="label-title">Квартира</div>
             <div class="label-item">
-                <input type="text" ng-model="$parent.model.flat">
+                <input type="text" ng-model="$parent.model.flat" required>
             </div>
         </label>
     </div>
