#GIG-322 Добавление объекта. Переименовать поле ввода

--- a/Client.Web/Scripts/app/component/tab-section/templates/details.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/details.html
@@ -57,7 +57,7 @@
     <label class="form-label">
         <div class="label-title">Коментарий</div>
         <div class="label-item">
-            <textarea placeholder="Описание в свободной форме" ng-model="$parent.model.comment" required></textarea>
+            <textarea placeholder="Ремонт, парковка, инфраструктура и т.д." ng-model="$parent.model.comment" required></textarea>
         </div>
     </label>
 
