--- a/Client.Web/Scripts/app/component/tab-section/templates/docs.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/docs.html
@@ -32,4 +32,4 @@
 </div>
 
 <button ng-if="tabCollectionType !== 'sale'" class="button action action_next green large next" ng-click="saveAndGoTo(currentTab, tabCollectionType)">Сохранить и перейти дальше</button>
-<button ng-if="tabCollectionType === 'sale'" class="button action action_next orange large finish" ng-disabled="!uploadedFiles.length" ng-click="sendData(0)">Сохранить и опубликовать</button>
+<button ng-if="tabCollectionType === 'sale'" class="button action action_next orange large finish" ng-disabled="!uploadedFiles.length || isPublishing" ng-click="sendData(0)">Сохранить и опубликовать</button>
