#GIG-298 Создание объекта. Съезжают крестики удаления станций метро

--- a/Client.Web/Scripts/app/component/metro-station-multiselect/metro-station-multiselect.scss
+++ b/Client.Web/Scripts/app/component/metro-station-multiselect/metro-station-multiselect.scss
@@ -49,7 +49,7 @@
         display: block;
         width: 12px;
         height: 12px;
-        top: 12pxpx;
+        top: 12px;
       }
       &:hover {
         .mid-dot {
