#GIG-236 Авторизация. Поправить сообщение валидации

--- a/Client.Web/Scripts/app/component/login-page/login.html
+++ b/Client.Web/Scripts/app/component/login-page/login.html
@@ -40,9 +40,8 @@
                              ng-show="loginForm.email.$invalid && loginForm.email.$touched">
                             Проверьте правильность ввода
                         </div>
-                        <div class="help-block"
-                             ng-show="error">
-                            Почта или пароль указаны неверно
+                        <div class="help-block" ng-show="error">
+                            Проверьте правильность ввода
                         </div>
                     </div>
                     <label>Пароль</label>
