сделал вторичку и частный дом значениями по умолчанию

--- a/Client.Web/Scripts/app/component/tab-section/templates/details.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/details.html
@@ -23,7 +23,7 @@
 
     <label class="form-label">
         <div class="label-title">Тип недвижимости</div>
-        <div class="label-item">
+        <div class="label-item" ng-init="$parent.model.realEstateType = $parent.model.realEstateType || data.realEstateTypes[1]">
             <div class="select-wrapper">
             <select name="realEstateType"
                     ng-options="option.name for option in data.realEstateTypes track by option.id"
@@ -35,7 +35,7 @@
 
     <label class="form-label">
         <div class="label-title">Категория строения</div>
-        <div class="label-item">
+        <div class="label-item" ng-init="$parent.model.buildCategory = $parent.model.buildCategories || data.buildCategories[0]">
             <div class="select-wrapper">
                 <select name="buildCategory"
                         ng-options="option.name for option in data.buildCategories track by option.id"
